WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
246432
REGRESSION(
255205@main
): Not all members of PublicKeyCredentialRequestOptions should be serialized
https://bugs.webkit.org/show_bug.cgi?id=246432
Summary
REGRESSION(255205@main): Not all members of PublicKeyCredentialRequestOptions...
Alex Christensen
Reported
2022-10-12 16:35:56 PDT
rdar://101057340
Attachments
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2022-10-12 16:39:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/5309
EWS
Comment 2
2022-10-12 19:16:13 PDT
Committed
255463@main
(d03ef2474704): <
https://commits.webkit.org/255463@main
> Reviewed commits have been landed. Closing PR #5309 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug