Cherry-pick d03ef2474704. rdar://problem/101057340

REGRESSION(255205@main): Not all members of PublicKeyCredentialRequestOptions should be serialized
    https://bugs.webkit.org/show_bug.cgi?id=246432
    rdar://101057340

    Reviewed by J Pascoe.

    * Source/WebCore/Modules/webauthn/PublicKeyCredentialRequestOptions.h:
    * Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:

    Canonical link: https://commits.webkit.org/255463@main

Canonical link: https://commits.webkit.org/255303.3@safari-7615.1.9-branch